--- a/info/_assets/siteedit/siteedit.css
+++ b/info/_assets/siteedit/siteedit.css
@@ -1,5 +1,18 @@
-body {
-	padding-top:40px;
+
+header.hero-unit h1 {
+margin-bottom:10px;
+}
+.hero-side img {
+width:120px;
+}
+.hero-side a {
+display:block;
+text-align:right;
+margin-bottom:15px;
+}
+.section-img {
+	width: 256px;
+	margin: 0 20px;
 }
 .footer {
 text-align: center;
